--- a/package.json
+++ b/package.json
@@ -2,10 +2,16 @@
   "name": "posterest",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://pa.txto.com.br/pstrst/",
   "dependencies": {
+    "psl": "^1.1.32",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-redux": "^7.0.3",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.0.1",
+    "redux": "^4.0.1",
+    "semantic-ui-react": "^0.87.1"
   },
   "scripts": {
     "start": "react-scripts start",
