--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ networks:
 
 services:
   posterest:
-    image: node:carbon
+    image: node:12-slim
     working_dir: '/home/node/'
     volumes:
       - './:/home/node/:cached'
