--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -4,6 +4,6 @@ version: "3"
 
 services:
   posterest:
-    command: bash -c "npm install && npm run build && node serve.js"
+    command: bash -c "npm install && node serve.js"
     labels:
       - "traefik.frontend.rule=Host:posterest.txto.com.br"
