--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "p-e-rest",
-  "version": "0.1.0",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "deploy": "scp -r dist/* root@txto.com.br:/var/www/posterest/dist/",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
