--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -3,6 +3,6 @@ version: "3"
 services:
   posterest:
     #development build
-    command: bash -c "npm i express && npx nodemon serve"
+    command: bash -c "npm install && npm run serve"
     labels:
       - "traefik.frontend.rule=Host:posterest.localhost"
