--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.8.3",
     "dayjs": "^1.11.3",
     "vue": "^2.6.14",
+    "vue-router": "^3.1.3",
     "vuetify": "^2.6.0"
   },
   "devDependencies": {
