--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dayjs": "^1.11.3",
     "vue": "^2.6.14",
     "vue-router": "^3.1.3",
+    "vue-top-progress": "^0.7.0",
     "vuetify": "^2.6.0"
   },
   "devDependencies": {
